# JAXIGA_pv

./: .gitignore  README.md  pyproject.toml
examples/darcy/: Darcy1D_inverse_DEM.py  Darcy1D_inverse_DEM_new.py  Darcy1D_inverse_PINN.py
examples/linear_elasticity/: Elast2D_EM_Spline_plate_w_five_holes.py  Elast2D_EM_Spline_plate_w_hole.py  Elast2D_EM_Spline_quarter_annulus.py  Elast2D_EM_Spline_tension_plate.py  Elast2D_IGA_Spline_Tension_plate.py  Elast2D_IGA_Spline_plate_w_five_holes.py  Elast2D_IGA_Spline_plate_w_hole.py  Elast2D_IGA_Spline_quarter_annulus.py  Elast2D_IGA_plate_w_five_holes_cart.py  Elast3D_Cube_IGA_Spline.py  Elast3D_HollowSphere_DEM_Spline.py  Elast3D_HollowSphere_IGA_Spline.py  elast2d_plate_w_five_holes_DEM.vtu  elast_2d_quarter_annulus_DEM.vtu
examples/phase_field/: PF1D.py  PF1D_4th_EM.py  PF1D_EM.py  PF1D_FD.py  PF1D_FD_CNN.py  PF1D_PINN.py  PF2D_EM_shear_plate.py  PF2D_EM_tension_plate.py  PF2D_IGA_Plate_3holes.py  PF2D_IGA_Shear_plate.py  PF2D_IGA_Tension_plate.py
examples/poisson/: Poisson1D_Collocation_BFGS_Spline.py  Poisson1D_Collocation_GMRES_Spline.py  Poisson1D_Collocation_LinInv_Spline.py  Poisson1D_EM.py  Poisson1D_IGA.py  Poisson1D_IGA_Collocation.py  Poisson1D_PINN.py  Poisson1D_PINN_jaxopt.py  Poisson1D_PU_DEM.py  Poisson2D_EM.py  Poisson2D_EM_plate_w_hole.py  Poisson2D_FEM_Spline_platewhole.py  Poisson2D_IGA.py  Poisson2D_IGA_Collocation.py  Poisson3D_Cube_EM.py  Poisson3D_Cube_IGA.py  Poisson3D_HollowSphere_EM.py  Poisson3D_HollowSphere_IGA.py
paper/: main.tex
src/jaxiga/: __init__.py
src/jaxiga/utils/: Geom.py  (+26 more)
(+12 files in other folders)
